--- a/WebContent/resources/css/main.css
+++ b/WebContent/resources/css/main.css
@@ -1,3 +1,32 @@
+html, body, div, span,
+footer, header {
+    margin:0;
+    padding:0;
+    border:0;
+    outline:0;
+    font-size:100%;
+    vertical-align:baseline;
+    background:transparent;
+}
+
+body {
+    line-height:1;
+}
+
 #header{
-	background-color: #3333c5;
+	background-color: #337ab7;
+	height: 60px;
+}
+
+#header_text a{
+	position: relative;
+	top: 50%;
+	transform: perspective(1px) translateY(-50%);
+	color: #fff;
+	text-decoration: none !important;
+}
+
+.wrap{
+	margin-left: 100px;
+	margin-right:1
 }
