--- a/WebContent/resources/css/main.css
+++ b/WebContent/resources/css/main.css
@@ -1,32 +1,43 @@
-html, body, div, span,
-footer, header {
-    margin:0;
-    padding:0;
-    border:0;
-    outline:0;
+body{
+	background-color: #54565e;
+}
+
+#body{
+	
+}
+
+#header div{
     font-size:100%;
     vertical-align:baseline;
     background:transparent;
 }
 
-body {
-    line-height:1;
-}
-
 #header{
 	background-color: #337ab7;
-	height: 60px;
 }
 
 #header_text a{
-	position: relative;
-	top: 50%;
-	transform: perspective(1px) translateY(-50%);
+	font-size: 42px;
 	color: #fff;
 	text-decoration: none !important;
 }
 
+#main{
+	padding-top: 22px;
+	background-color: #fff;
+	border-left: 1px solid #000000;
+	border-right: 1px solid #000000;
+}
+
+#footer{
+	background-color: #fff;
+	padding-top: 22px;
+	border-left: 1px solid #000000;
+	border-right: 1px solid #000000;
+	border-bottom: 1px solid #000000;
+}
+
 .wrap{
 	margin-left: 100px;
-	margin-right:1
+	margin-right:100px;
 }
