--- a/WebContent/resources/css/main.css
+++ b/WebContent/resources/css/main.css
@@ -14,6 +14,10 @@ body{
 
 #header{
 	background-color: #337ab7;
+	background: -webkit-linear-gradient(#2e6594, #337ab7, #2e6594); /* For Safari 5.1 to 6.0 */
+	background: -o-linear-gradient(#2e6594, #337ab7, #2e6594); /* For Opera 11.1 to 12.0 */
+	background: -moz-linear-gradient(#2e6594, #337ab7, #2e6594); /* For Firefox 3.6 to 15 */
+	background: linear-gradient(#2e6594, #337ab7, #2e6594); /* Standard syntax */
 }
 
 #header_text{
@@ -46,6 +50,7 @@ body{
 	border-left: 1px solid #000000;
 	border-right: 1px solid #000000;
 	border-bottom: 1px solid #000000;
+	margin-bottom: 22px;
 }
 
 .wrap{
